# ospsd-team7-issue-tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  render.yaml  test.sh
.circleci/: config.yml  gcp_deploy.sh
components/ai_client_api/: README.md  pyproject.toml
components/ai_client_api/src/ai_client_api/: __init__.py  client.py  exceptions.py  resilience.py  sanitize.py  signature_tools.py  structured_output.py  tool.py  types.py
components/ai_client_api/tests/: client_tests.py  conftest.py  resilience_tests.py  sanitize_tests.py  signature_tools_tests.py  structured_output_tests.py  types_tests.py
components/chat_client_impl/: README.md  pyproject.toml
components/chat_client_impl/src/chat_client_impl/: __init__.py  client.py  slack.py
components/chat_client_impl/tests/: client_test.py  slack_test.py
components/claude_ai_client_impl/: README.md  pyproject.toml
components/claude_ai_client_impl/src/claude_ai_client_impl/: __init__.py  client.py  config.py  mock_chat.py  prompt.py  serializers.py  tools.py
components/claude_ai_client_impl/tests/: client_tests.py  config_tests.py  conftest.py  serializers_tests.py  tools_tests.py
components/issue_tracker_adapter/: README.md  pyproject.toml
components/issue_tracker_adapter/src/issue_tracker_adapter/: __init__.py  board.py  client.py  issue.py  list.py  member.py
components/issue_tracker_adapter/tests/: board_test.py  client_test.py  conftest.py  issue_test.py  list_test.py  member_test.py
components/issue_tracker_client_api/: README.md  pyproject.toml
components/issue_tracker_client_api/src/issue_tracker_client_api/: __init__.py  board.py  client.py  exceptions.py  issue.py  list.py  member.py
components/issue_tracker_client_api/tests/: board_tests.py  client_tests.py  conftest.py  issue_tests.py  list_tests.py  member_tests.py
components/issue_tracker_service/: README.md  pyproject.toml
components/issue_tracker_service/alembic/: env.py
components/issue_tracker_service/alembic/versions/: 279f50c69e3a_add_user_sessions_table.py
components/issue_tracker_service/src/issue_tracker_service/: __init__.py  ai_deps.py  main.py  telemetry.py
components/issue_tracker_service/src/issue_tracker_service/db/: __init__.py  base.py  engine.py  models.py  sessions.py
components/issue_tracker_service/src/issue_tracker_service/routes/: __init__.py  ai.py  auth.py  health.py
components/issue_tracker_service/tests/: ai_deps_test.py  ai_test.py  auth_test.py  conftest.py  db_engine_test.py  health_test.py  main_test.py  telemetry_test.py
components/issue_tracker_service_api_client/: README.md  pyproject.toml
components/issue_tracker_service_api_client/issue_tracker_service_client/: __init__.py
components/issue_tracker_service_api_client/issue_tracker_service_client/api/authentication/: auth_callback_auth_callback_get.py  auth_login_auth_login_get.py
components/issue_tracker_service_api_client/issue_tracker_service_client/api/default/: add_member_to_board_boards_board_id_members_post.py  assign_issue_issues_issue_id_assign_post.py  create_board_boards_post.py  create_issue_issues_post.py  create_list_lists_post.py  delete_board_boards_board_id_delete.py  delete_issue_issues_issue_id_delete.py  delete_list_lists_list_id_delete.py  get_board_boards_board_id_get.py  get_issue_issues_issue_id_get.py  get_issue_members_issues_issue_id_members_get.py  get_issues_boards_board_id_issues_get.py  get_issues_in_list_lists_list_id_issues_get.py  get_list_lists_list_id_get.py  (+7 more)
components/issue_tracker_service_api_client/issue_tracker_service_client/models/: __init__.py  add_member_to_board_boards_board_id_members_post_response_add_member_to_board_boards_board_id_members_post.py  add_member_to_board_request.py  assign_issue_issues_issue_id_assign_post_response_assign_issue_issues_issue_id_assign_post.py  assign_issue_request.py  auth_callback_response.py  board_response.py  create_board_request.py  create_issue_request.py  create_list_request.py  delete_board_boards_board_id_delete_response_delete_board_boards_board_id_delete.py  delete_issue_issues_issue_id_delete_response_delete_issue_issues_issue_id_delete.py  delete_list_lists_list_id_delete_response_delete_list_lists_list_id_delete.py  issue_response.py  list_response.py  member_response.py  update_board_request.py  update_issue_request.py  update_issue_status_issues_issue_id_status_put_response_update_issue_status_issues_issue_id_status_put.py  update_list_request.py  update_status_request.py
components/openai_ai_client_impl/: README.md  pyproject.toml
components/openai_ai_client_impl/src/openai_ai_client_impl/: __init__.py  client.py  config.py  domain_catalog.py
components/openai_ai_client_impl/tests/: client_tests.py  config_tests.py  domain_catalog_tests.py
components/trello_client_impl/: README.md  pyproject.toml
components/trello_client_impl/src/trello_client_impl/: __init__.py  board.py  client.py  issue.py  list.py  member.py
components/trello_client_impl/tests/: board_test.py  client_test.py  conftest.py  issue_test.py  list_test.py  member_test.py  trello_impl_test.py
docs/: ai-integration.md  architecture.md  architecture.puml  ci-cd.md  code-quality.md  cross-vertical-slack.md  deployment.md  index.md
docs/api/: chat_client_api.md  issue_tracker_adapter.md  issue_tracker_client_api.md  issue_tracker_service.md  trello_client_impl.md
docs/design/: iac-telemetry-design.md
docs/monitoring/: grafana-kpi-runbook.md
docs/testing/: TESTING.md  TEST_FILES_REFERENCE.md
infrastructure/monitoring/: alerts.yml  docker-compose.yml  prometheus.yml
infrastructure/monitoring/grafana/dashboards/: issue-tracker-kpis.json
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/e2e/: ai_tools_trello_e2e_tests.py  conftest.py  e2e_tests.py  service_health_e2e_tests.py
tests/integration/: ai_chat_integration_tests.py  conftest.py  integration_tests.py
(+1 files in other folders)
