[project]
name = "ospsd-team-07"
version = "0.1.0"
description = "OSPSD Team 07 - Issue Tracker Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocstrings-python>=1.16.0",
    "mypy>=1.15.0",
    "pymdown-extensions>=10.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "types-requests>=2.31.0",
]

[tool.uv.workspace]
members = ["components/*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",   # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `incorrect-blank-line-before-class`.
  "D213",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
  "COM812", # `missing-trailing-comma` conflicts with the ruff formatter, which handles trailing commas automatically.
  "S101",   # Use of `assert` detected — asserts are intentional in our codebase; tests use them profusely.
]

[tool.ruff.lint.per-file-ignores]
# Test files: relaxed rules for pytest patterns and fixtures
"**/tests/**/*.py" = [
  "TRY300",  # Return inside try block — common pattern in test error handling
  "BLE001",  # Blind exception catch — tests may catch broad exceptions intentionally
  "ANN401",  # Dynamically typed expressions (Any) — needed for mocking
  "SLF001",  # Private member access — tests may need to verify internal state
  "E501",    # Line too long — test assertions can be verbose
  "S105",    # Hardcoded password in variable — tests use fake credentials
  "ARG001",  # Unused function argument — pytest fixtures may appear unused
  "ARG002",  # Unused method argument — same as above
  "S106",    # Hardcoded password in function arg — same as above
  "INP001",  # Missing __init__.py — test dirs must not have __init__.py per hw1
  "PLC0415", # Import not at top of file — tests may import inside functions
]
# Pytest conftest: hooks and fixtures
"conftest.py" = [
  "ANN001",  # config arg — pytest hook
  "ANN201",  # return type — pytest hook
  "E501",    # Line too long — marker descriptions
]

[tool.mypy]
strict = true
explicit_package_bases = true  # Required for src layout
mypy_path = ["components/issue_tracker_client_api/src", "components/trello_client_impl/src"]
ignore_missing_imports = false
warn_unused_ignores = false
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "components/issue_tracker_client_api/src",
    "components/trello_client_impl/src",
]
testpaths = ["tests", "components/*/tests"]
python_files = ["*_test.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: marks tests as unit tests (no external dependencies req as of now)",
    "integration: marks tests as integration tests (requires dependencies)",
    "e2e: marks tests as end-to-end tests (full system, auto-skipped without credentials)",
]
addopts = [
    "--cov=components",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--import-mode=importlib",
    "-v",
]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.coverage.run]
branch = true
source = ["components"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.*",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
