[project]
name = "chat-client-impl"
version = "0.1.0"
description = "Local in-memory implementation of the ChatClient API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chat-client-api",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_client_impl"]

[tool.uv.sources]
chat-client-api = { git = "https://github.com/HarshithKoriRaj/Shared-API.git", rev = "main" }
