[project]
name = "claude-ai-client-impl"
version = "0.1.0"
description = "Anthropic Claude implementation of ai_client_api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-client-api",
    "issue-tracker-client-api",
    "chat-client-api",
    "anthropic>=0.40.0",
    "opentelemetry-api>=1.28.0",
    "prometheus-client>=0.23.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_ai_client_impl"]

[tool.uv.sources]
ai-client-api = { workspace = true }
issue-tracker-client-api = { workspace = true }
chat-client-api = { git = "https://github.com/HarshithKoriRaj/Shared-API", rev = "main" }
