[project]
name = "issue_tracker_service"
version = "0.1.0"
description = "FastAPI service wrapper for issue tracker client"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-requests>=0.49b0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
    "requests-oauthlib>=1.3.1",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "issue-tracker-client-api",
    "issue-tracker-client-impl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/issue_tracker_service"]

[tool.ruff]
line-length = 120

[tool.uv.sources]
issue-tracker-client-api = { workspace = true }
issue-tracker-client-impl = { workspace = true }
