[project]
name = "issue_tracker_service"
version = "0.1.0"
description = "FastAPI service wrapper for issue tracker client"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
    "requests-oauthlib>=1.3.1",
    "issue-tracker-client-api",
    "issue-tracker-client-impl",
    "ai-client-api",
    "claude-ai-client-impl",
    "chat-client-api",
    "chat-client-impl",
    "slack-client-impl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/issue_tracker_service"]

[tool.ruff]
line-length = 120

[tool.uv.sources]
issue-tracker-client-api = { workspace = true }
issue-tracker-client-impl = { workspace = true }
ai-client-api = { workspace = true }
claude-ai-client-impl = { workspace = true }
chat-client-impl = { workspace = true }
chat-client-api = { git = "https://github.com/HarshithKoriRaj/Shared-API", rev = "main" }
slack-client-impl = { git = "https://github.com/HarshithKoriRaj/CS-GY-9223-Open-Source", rev = "91eedf88e6823e1f924cbeb05c6a74aa0a524b34", subdirectory = "components/slack_client_impl" }
